--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "mall-admin-web",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "mall后台管理前端",
-  "author": "macro",
+  "author": "jinxiu",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
